Fix react grid collapse on external drop (#1531)

--- a/src/ui/units/dash/containers/FixedHeader/FixedHeader.scss
+++ b/src/ui/units/dash/containers/FixedHeader/FixedHeader.scss
@@ -1,7 +1,8 @@
-@mixin flexReactGridLayout {
+@mixin flexReactGridLayout($minHeight: 44px) {
     & > .react-grid-layout {
         flex: 1;
         transition: none;
+        min-height: $minHeight;
     }
 }
 
